cmake_minimum_required (VERSION 2.6)
set(CMAKE_CXX_FLAGS "-O0 -ggdb -std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -std=c++11")
set(CMAKE_CXX_FLAGS_RELEASE "-g0 -O3 -std=c++11")
set(CMAKE_VERBOSE_MAKEFILE ON)
project (puyo-server)

set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
set(CURSES_NEED_NCURSES TRUE)
find_package(Curses REQUIRED) 
find_package(Boost COMPONENTS system REQUIRED) 

include_directories(${Boost_INCLUDE_DIRS}) 
include_directories(${CURSES_INCLUDE_DIR}) 
add_executable(puyo-server src/puyo-server.cpp) 
target_link_libraries(puyo-server ${Boost_LIBRARIES})
target_link_libraries(puyo-server ${CURSES_LIBRARIES})
